# intex-spa

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  com.sxnlabs.spa.plist.tmpl  install.sh  probe.py  pyproject.toml
intex_spa/: __init__.py  camera.py  client.py  cover_detect.py  history.py  protect_client.py  protocol.py  schedule.py  scheduler.py  supervisor.py  weather.py
tests/: fake_spa.py  test_auth.py  test_camera.py  test_client_e2e.py  test_history.py  test_http.py  test_i18n.py  test_protocol.py  test_schedule.py  test_scheduler.py  test_supervisor.py  test_weather.py
web/: auth.py  i18n.py  main.py
web/static/: app.css  camera.js  schedule.js
web/templates/: _panel.html  index.html  login.html  recap.html
web/translations/: en.json  fr.json
