[project]
name = "intex-spa"
version = "0.1.0"
description = "Local web control for an Intex PureSpa (Baltik) over LAN"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

# This is a runnable app, not a distributable package — don't try to build it,
# just provision the venv from dependencies.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
asyncio_mode = "auto"
testpaths = ["tests"]
